--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
+    "dotenv": "^8.2.0",
     "moment": "2.29.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
@@ -17,6 +18,7 @@
     "react-bootstrap-table2-paginator": "2.1.2",
     "react-dom": "17.0.2",
     "react-dropzone": "11.4.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-image-gallery": "1.2.7",
     "react-multi-carousel": "2.6.5",
     "react-notifications": "1.7.2",
@@ -46,7 +48,7 @@
     "eject": "react-scripts eject",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
+    "build:prod": "webpack  --mode=production --node-env=production",
     "watch": "webpack --watch",
     "dev": "webpack serve --mode=development --node-env=development"
   },
