--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "prod": "pm2 start server.config.js",
-    "stop:prod": "pm2 stop server.config.js"
+    "stop:prod": "pm2 stop server.config.js",
+    "monit": "pm2 monit"
   },
   "author": "Toth Gergo",
   "license": "ISC",
@@ -26,7 +27,8 @@
     "pm2": "5.1.2",
     "ssh2": "1.5.0",
     "tunnel-ssh": "4.1.6",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "xml": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
