--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
+    "base64-arraybuffer": "^1.0.2",
     "dotenv": "^8.2.0",
     "moment": "2.29.1",
     "prop-types": "15.7.2",
@@ -26,6 +27,7 @@
     "react-router-dom": "6.0.2",
     "react-scripts": "3.4.4",
     "react-select": "5.2.1",
+    "react-sortable-hoc": "^2.0.0",
     "reactstrap": "9.0.1",
     "sass": "1.43.4"
   },
